@@ -15,21 +15,17 @@ open OpamParserTypes.FullPos
 
 (** Opam config file generic type parser *)
 
-let get_pos_full ?(s=1) n =
-  let spos = Parsing.rhs_start_pos s in
-  let epos = Parsing.rhs_end_pos n in
+let pos_of_lexing_pos spos epos =
   Lexing.({
-      filename = spos.pos_fname;
-      start = spos.pos_lnum, spos.pos_cnum - spos.pos_bol;
-      stop = epos.pos_lnum, epos.pos_cnum - epos.pos_bol;
-    })
+    filename = spos.pos_fname;
+    start = spos.pos_lnum, spos.pos_cnum - spos.pos_bol;
+    stop = epos.pos_lnum, epos.pos_cnum - epos.pos_bol;
+  })
+
+let get_pos_full ?(s=1) n =
+  pos_of_lexing_pos (Parsing.rhs_start_pos s) (Parsing.rhs_end_pos n)
 
 let get_pos n = get_pos_full ~s:n n
-
-let parsed_so_far = ref []
-
-let record_token t =
-  parsed_so_far := t :: !parsed_so_far; t
 
 (* This must match up with the package's version; checked by the build system *)
 let version = (2, 1)
@@ -69,7 +65,7 @@ let version = (2, 1)
 %%
 
 main:
-| items EOF { parsed_so_far := []; fun file_name ->
+| items EOF { fun file_name ->
         { file_contents = $1; file_name } }
 ;
 
@@ -80,14 +76,12 @@ items:
 
 item:
 | IDENT COLON value                {
-  record_token
   { pos = get_pos_full 3;
     pelem =
       Variable ({ pos = get_pos 1; pelem =  $1 }, $3);
   }
 }
 | IDENT LBRACE items RBRACE {
-  record_token
   { pos = get_pos_full 4;
     pelem =
       Section ({section_kind = { pos = get_pos 1; pelem = $1 };
@@ -98,7 +92,6 @@ item:
   }
 }
 | IDENT STRING LBRACE items RBRACE {
-  record_token
   { pos = get_pos_full 4;
     pelem =
       Section ({section_kind = { pos = get_pos 1; pelem = $1 };
@@ -165,84 +158,131 @@ let with_clear_parser f x =
     Parsing.clear_parser ();
     raise e
 
-exception Nothing
-
-let reset_lexbuf l file_name (start_line, start_col) (end_line, end_col) =
+(* Update a lexbuf with position information prior to raising an exception *)
+let reset_lexbuf_and_abort l file_name (start_line, start_col) (end_line, end_col) exn =
   let open Lexing in
   l.lex_start_p <- {pos_fname = file_name; pos_lnum = start_line; pos_bol = 0; pos_cnum = start_col};
   l.lex_curr_p <- {pos_fname = file_name; pos_lnum = end_line; pos_bol = 0; pos_cnum = end_col};
-  true
+  exn ()
 
-let main t l file_name =
-  (* Always return a result from parsing/lexing, but note if an exception
-     occurred. *)
-  let parsing_exception = ref Lexing.(Nothing, dummy_pos, dummy_pos) in
-  let raise_if_parsing_failed = function
-  | false -> ()
-  | true ->
-      match parsing_exception with
-      | {contents = (Nothing, _, _)} -> ()
-      | {contents = (e, start, curr)} ->
-          let open Lexing in
-          l.lex_start_p <- start;
-          l.lex_curr_p <- curr;
-          raise e
+(* cf. OpamStd.fatal - always allow standard exceptions to propagate. *)
+let not_fatal = function
+| Sys.Break
+| Assert_failure _
+| Match_failure _ -> false
+| _ -> true
+
+(* Wrap the ocamlyacc parser *)
+let main lexer lexbuf file_name =
+  (* Extract the exceptions for opam-version not at the top of the file and
+     opam-version duplicated. OpamLexer has special cases for these two
+     constants. If OpamLexer.token isn't used, raise Parse_error instead. *)
+  let exn_not_first () =
+    let _ = lexer (Lexing.from_string "version: \"42\"\nopam-version: \"2.1\"") in
+    raise Parsing.Parse_error
+  and exn_duplicate () =
+    let _ = lexer (Lexing.from_string "opam-version: \"2.1\"\nopam-version: \"z\"") in
+    raise Parsing.Parse_error
+  and restore_pos (start, curr) =
+    let open Lexing in
+    lexbuf.lex_start_p <- start;
+    lexbuf.lex_curr_p <- curr
   in
-  let t l =
-    try t l
+  (* Raises the exn_not_first or exn_duplicate exceptions if an invalid
+     opam-version variable is found in the result. *)
+  let scan_opam_version_variable format_2_1_or_greater = function
+  | {pelem = Variable({pelem = "opam-version"; _}, {pelem = String ver; _}); pos = {start; stop; _}} ->
+      if format_2_1_or_greater then
+        (* [opam-version] can only appear once for 2.1+ *)
+        reset_lexbuf_and_abort lexbuf file_name start stop exn_duplicate
+      else if nopatch ver > (2, 0) then
+        (* Only [opam-version: "2.0"] can appear after the first non-comment/whitespace line of the file *)
+        reset_lexbuf_and_abort lexbuf file_name start stop exn_not_first
+      else
+        ()
+  | _ -> ()
+  in
+  (* Now parse the header of the file manually. The smallest valid opam file
+     is `ident: atom`, so if we can't read three tokens we have a parse error *)
+  let ((((_, p0) as initial_pos), ((_, p1) as pos1), ((_, p2) as pos2), ((_, p3) as pos3)), (t1, t2, t3)) =
+    let open Lexing in
+    try
+      let p0 = lexbuf.lex_start_p, lexbuf.lex_curr_p in
+      let t1 = lexer lexbuf in
+      let p1 = lexbuf.lex_start_p, lexbuf.lex_curr_p in
+      let t2 = lexer lexbuf in
+      let p2 = lexbuf.lex_start_p, lexbuf.lex_curr_p in
+      let t3 = lexer lexbuf in
+      let p3 = lexbuf.lex_start_p, lexbuf.lex_curr_p in
+      ((p0, p1, p2, p3), (t1, t2, t3))
     with
-    | Sys.Break
-    | Assert_failure _
-    | Match_failure _ as e -> raise e
-    | e -> parsing_exception := Lexing.(e, l.lex_start_p, l.lex_curr_p); EOF
+    | e when not_fatal e -> raise Parsing.Parse_error
   in
-    let r =
-      try with_clear_parser (main t l) file_name
-      with Parsing.Parse_error as e ->
-        parsing_exception := Lexing.(e, l.lex_start_p, l.lex_curr_p);
-        (* Record the tokens captured so far *)
-        let r = {file_contents = List.rev !parsed_so_far; file_name} in
-        parsed_so_far := [];
-        r
-    in
-    match r with
-    | {file_contents = {pelem = Variable({pelem = "opam-version"; _}, {pelem = String ver; _}); _}::items; _}
-      when nopatch ver >= (2, 1) ->
-        let opam_version_variable = function
-        | {pelem = Variable({pelem = "opam-version"; _}, _); pos = {start; stop; _}} ->
-            reset_lexbuf l file_name start stop
-        | _ -> false
+  (* Parse those three tokens if they are [opam-version: ver] *)
+  let (header, format_2_1_or_greater, trap_exceptions) =
+    match (t1, t2, t3) with
+    | (IDENT "opam-version", COLON, STRING ver) ->
+        let header =
+          (* Parsing or lexing errors immediate following opam-version may cause
+             an exception to be raised before the element has been fully parsed.
+             In this case, we generate a single opam-version Variable to return.
+           *)
+          {pelem = Variable({pelem = "opam-version"; pos = pos_of_lexing_pos p0 p1},
+                             {pelem = String ver; pos = pos_of_lexing_pos p2 p3});
+           pos = pos_of_lexing_pos p0 p3}
         in
-          (* For opam-version: 2.1 and later, there must be no other opam-version
-             fields. *)
-          if List.exists opam_version_variable items then
-            raise Parsing.Parse_error;
-          (* Parsing and lexing errors from future versions of opam are ignored:
-             the intent is that the tool will abort/ignore because of the
-             opam-version field rather than through lexer/parser errors. *)
-          raise_if_parsing_failed (nopatch ver <= version);
-          r
-    | {file_contents = items; _} ->
-        let opam_version_greater_2_0 = function
-        | {pelem = Variable({pelem = "opam-version"; _}, {pelem = String ver; _}); pos = {start; stop; _}}
-          when nopatch ver > (2, 0) ->
-            reset_lexbuf l file_name start stop
-        | _ -> false
+        (header, (nopatch ver >= (2, 1)), (nopatch ver > version))
+    | _ ->
+        (* Default is [opam-version: "2.0"] *)
+        let pos = {filename = ""; start = (0, 0); stop = (0, 0)} in
+        ({pelem = Variable ({pelem = ""; pos}, {pelem = Int 42; pos}); pos}, false, false)
+  in
+  (* The parser will use position information from the lexbuf, so replay the
+     positions, even if we're not actually reading anything. *)
+  restore_pos initial_pos;
+  (* Wrap the lexer to simulate reading those three tokens a second time *)
+  let lexer =
+    let tokens = ref [t1, pos1; t2, pos2; t3, pos3] in
+    fun lexbuf ->
+      match tokens with
+      | {contents = (t, p)::rest} ->
+          tokens := rest;
+          restore_pos p;
+          t
+      | {contents = []} ->
+          lexer lexbuf
+  in
+  let result =
+    try with_clear_parser (main lexer lexbuf) file_name
+    with e when trap_exceptions && not_fatal e ->
+      (* Append a syntactically invalid sentinel section "#" to the version
+         header which was manually parsed. That is then sufficient
+         information for a client to determine that the file was invalid.
+         If OpamBaseParser.version = (2, 1), this would allow
+         `opam-version: "2.2"`, containing no lexer or parser changes, still to
+         report syntax errors in opam 2.2, by using this sentinel group to
+         detect the parsing error. *)
+      let sentinel =
+        let pos =
+          Lexing.(pos_of_lexing_pos lexbuf.lex_start_p lexbuf.lex_curr_p)
         in
-          (* opam-version: 2.1 or later must be the first item. *)
-          if List.exists opam_version_greater_2_0 items then
-            raise Parsing.Parse_error;
-          (* If no opam-version field was given, all exceptions must be
-             raised. *)
-          raise_if_parsing_failed true;
-          r
+        let section =
+          {section_kind = {pelem = "#"; pos};
+           section_name = None;
+           section_items = {pelem = []; pos}}
+        in
+          {pelem = Section section; pos}
+      in
+      {file_contents = [header; sentinel]; file_name}
+  in
+  begin
+    match result with
+    | {file_contents = _::items; _} ->
+        (* Ensure that there are no `opam-version` fields with a value >= "2.1"
+           further down the file. *)
+        List.iter (scan_opam_version_variable format_2_1_or_greater) items
+    | _ -> ()
+  end;
+  result
 
-let value t l =
-  try
-    let r = value t l in
-    Parsing.clear_parser ();
-    r
-  with
-  | e ->
-    Parsing.clear_parser ();
-    raise e
+let value t l = with_clear_parser (value t) l
