@@ -3,7 +3,8 @@
 * opam-version: "2.1" must appear at most once and as the first non-comment
   item. If opam-version is at the start and is greater than the library version,
   `OpamLexer.Error` and `Parsing.Parse_error` are no longer raised; instead the
-  items parsed so far are returned. [#43 @dra27]
+  opam-version variable is returned along with an invalid group to signal the
+  parsing error, giving the client enough information to act. [#43, #44 @dra27]
 
 2.1.2 [07 Jan 2021]
 * Some hash-consing for strings [#27 @AltGr]
